--- a/templates/Objects/object.html
+++ b/templates/Objects/object.html
@@ -19,7 +19,7 @@
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
-                <div class="name">{{objects.name}}</div>
+                <div class="name">{{object_form.instance.name}}</div>
                 <div class="filter-bar__logo-container">
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
