Refactor database settings, add object groups functionality, and enhance user profile management
- Updated database connection settings for PostgreSQL.
- Added migrations to alter the 'group' field in the 'objects' model.
- Implemented new view and URL for managing object groups.
- Enhanced the edit_object view to handle permissions more effectively.
- Modified user registration form to include first and last names.
- Updated user profile display to show full names instead of usernames.
- Changed URL patterns to use user IDs instead of usernames for better reliability.
- Improved JavaScript functionality for managing group and object creation forms.
- Created new template for object groups management.
- Updated sidebar navigation to reflect new permissions and user profile changes.
- Removed unused images from media directory.

--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -21,7 +21,7 @@
             <div class="filter-bar__filter-container row">
                 <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0">
                 <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
-                <input type="submit" value="filter_alt" class="filter-bar__type material-symbols-outlined col-md-1 col-3">
+                <input type="submit" value="all_inbox" class="filter-bar__type material-symbols-outlined col-md-1 col-3" onclick="window.location.href='/object_groups';">
                 <div class="filter-bar__name col-md-4 col-8">
                     <input type="text">
                     <input value="search" type="submit" class="material-symbols-outlined">
