--- a/templates/Objects/object.html
+++ b/templates/Objects/object.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{%static '/CSS/Users/profileStyles.css'%}">
     <title>Usuario - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Visualización subusuario Log Inventory">
+    <meta name="description" content="Visualización Objeto Log Inventory">
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="noindex, nofollow">
 </head> 
