--- a/static/CSS/sideBarStyles.css
+++ b/static/CSS/sideBarStyles.css
@@ -66,9 +66,9 @@
     transition: border-radius .4s;
 }
 
-.sidebar__item-link:hover, .active {
+.sidebar__item-link:hover, .sidebar__item-link.active {
     background-color: var(--bg-color);
-    border-radius: 36px 0 0 36px;
+    border-radius: 36px 0 0 36px; 
 }
 
 .active {
