--- a/templates/Objects/object_groups.html
+++ b/templates/Objects/object_groups.html
@@ -7,11 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/Objects/mainStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/Users/subprofilesGroupStyles.css'%}">
+    <link rel="stylesheet" href="{%static '/CSS/Objects/objectsGroupStyles.css'%}">
     <title>Work space - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Work space Log Inventory">
+    <meta name="description" content="Grupos de Objetos Log Inventory">
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="noindex, nofollow"> 
 </head>
@@ -59,11 +58,15 @@
                 </div>
             </dialog>
         </div>  
-         
-
         <div class="groups">
             {% for form in forms %}
             <div class="group-container">
+                <div class="group-header">
+                    <span class="material-symbols-outlined toggle-icon">expand_more</span>
+                    <h3 class="group-title">{{form.instance.name}}</h3>
+                    <p class="group-in-charge">Encargado: {{form.instance.in_charge}}</p>
+                </div>
+                <div class="group-body">
                 <form method="POST" class="group-image" enctype="multipart/form-data">
                     <label for="id_image_{{form.instance.id}}">
                         <img src="{{form.instance.image.url}}" alt="Group Image">
@@ -90,7 +93,6 @@
                         {{form.in_charge.label_tag}}
                         {{form.in_charge}}
                     </div>
-
                     <input type="submit" value="delete" class="delete-button material-symbols-outlined" form="delete_group_{{form.instance.id}}">
                     <input type="submit" value="Guardar" class="save-button">
                 </form>
@@ -120,7 +122,8 @@
                     <input type="checkbox" name="delete_group" id="id_delete_group_{{form.instance.id}}" checked hidden>
                 </form>
             </div>
-            {% endfor %}
+        </div>
+        {% endfor %}    
         </div>
         {% if messages %}
             <div class="messages-container">
