--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{%static '/CSS/Users/subusersStyles.css'%}">
     <title>Manejo de Grupos - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Subusers Groups Log Inventory">
+    <meta name="description" content="Grupos de Subusuarios Log Inventory">
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="noindex, nofollow">
 </head>
