--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static '/CSS/Users/subusersStyles.css' %}">
     <title>Manejo de Usuarios - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
-    <meta name="description" content="Subusers Log Inventory">
+    <meta name="description" content="Subusuarios Log Inventory">
     <meta name="author" content="Log Inventory"> 
     <meta name="robots" content="noindex, nofollow">  
 </head>  
