feat: Enhance filtering and search functionality for objects; update titles and improve queryset filtering for active objects

--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -23,7 +23,7 @@
                 <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
                 <input type="submit" value="all_inbox" class="filter-bar__type material-symbols-outlined col-md-1 col-3" onclick="window.location.href='/object_groups';">
                 <div class="filter-bar__name col-md-4 col-8">
-                    <input type="text">
+                    <input type="text" placeholder="Buscar objeto por nombre..." id="search-input">
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
                 <div class="filter-bar__logo-container col-md-5 col-0">
