--- a/templates/Objects/object.html
+++ b/templates/Objects/object.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/sideBarSmallStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/Users/profileStyles.css'%}">
-    <title>Usuario - Log Inventory</title>
+    <title>Objeto - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Visualización subusuario Log Inventory">
     <meta name="author" content="Log Inventory">
