--- a/templates/Objects/object_groups.html
+++ b/templates/Objects/object_groups.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/Objects/mainStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/Users/subprofilesGroupStyles.css'%}">
-    <title>Work space - Log Inventory</title>
+    <title>Manejo de Grupos - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Work space Log Inventory">
     <meta name="author" content="Log Inventory">
