--- a/static/CSS/Users/subusersStyles.css
+++ b/static/CSS/Users/subusersStyles.css
@@ -308,6 +308,7 @@ dialog button:hover {
     color: #fff;
     text-align: left;
     font-weight: bold;
+    opacity: 0.8;
 }
 
 .subusers-table thead th {
