--- a/templates/Objects/object_groups.html
+++ b/templates/Objects/object_groups.html
@@ -76,10 +76,7 @@
                     </label>
                     {% csrf_token %} 
                     <input type="number" value="{{form.instance.id}}" hidden name="id">
-                    <div>
-                        <label for="id_image_{{form.instance.id}}" >Imagen de Perfil:</label>
-                        <input type="file" name="image" class="" accept="image/*" required="" id="id_image_{{form.instance.id}}" >
-                    </div>
+                    <input type="file" name="image" class="image-input" accept="image/*" required="" id="id_image_{{form.instance.id}}" >
                     <input type="submit" id="id_submit_{{form.instance.id}}" hidden>
                 </form>
                 <form method="POST" id="{{form.instance.id}}_form" class="group-info"> 
@@ -93,8 +90,6 @@
                         {{form.in_charge.label_tag}}
                         {{form.in_charge}}
                     </div>
-                    <input type="submit" value="delete" class="delete-button material-symbols-outlined" form="delete_group_{{form.instance.id}}">
-                    <input type="submit" value="Guardar" class="save-button">
                 </form>
                 <div class="group-description__container">
                     <label for="id_description_{{form.instance.id}}">Descripción:</label>
@@ -110,6 +105,11 @@
                         {%endif%}
                     </div>
                 </div>
+                <form class="group-buttons" method="POST">
+                    {% csrf_token %}
+                    <input type="submit" value="delete" class="delete-button material-symbols-outlined" form="delete_group_{{form.instance.id}}">
+                    <input type="submit" value="Guardar" class="save-button">
+                </form>
                 <form method="POST">
                     {% csrf_token %}
                     <input type="number" value="{{form.instance.id}}" hidden name="id">
