--- a/templates/Objects/object.html
+++ b/templates/Objects/object.html
@@ -110,7 +110,10 @@
                     {{ object_form.group }}
                 </div>
                 {% if permissions != 'Estudiante' %}
-                <input type="submit" value="Guardar cambios" class="submit-button" id="submit">
+                <div class="button-container">
+                    <input type="submit" value="delete" class="delete-buton material-symbols-outlined">
+                    <input type="submit" value="Guardar cambios" class="submit-button" id="submit">
+                </div>
                 {% endif %}
             </form>
 
