--- a/templates/Users/subprofile.html
+++ b/templates/Users/subprofile.html
@@ -107,7 +107,10 @@
                     
                     <input type="password" name="new_password2" placeholder="Confirmar Contraseña"  maxlength="30" minlength="8"  id="id_new_password2">
                 </div>
-                <input type="submit" id="submit" value="Actualizar">
+                <div class="button-container">
+                    <input type="submit" value="delete" class="delete-buton material-symbols-outlined">
+                    <input type="submit" value="Guardar cambios" class="submit-button" id="submit">
+                </div>
 
                 {% endif %}
                 
