--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -7,7 +7,7 @@
     <nav class="sidebar__nav">
         <ul> 
             {% if path == 'main' %} 
-            {% if permissions == 'admin' or permissions == "Profesor" and path == "main"  %}
+            {% if permissions == 'admin' or permissions == "Profesor"  %}
             <li class="sidebar__tools">
                 <p>Herramientas<span class="material-symbols-outlined">build</span></p>
                 <div class="sidebar__item">
@@ -52,6 +52,17 @@
                     </label>
                 </div>
             </li>
+            {% elif path == "log"  %}
+            {% if permissions == 'admin' or permissions == "Profesor"  %}
+            <li class="sidebar__tools">
+                <p>Herramientas<span class="material-symbols-outlined">build</span></p>
+                <div class="sidebar__item">
+                    <label for="export-object" class="sidebar__item-link export-log-label">
+                        <span class="material-symbols-outlined">arrow_circle_down</span>
+                        <p>Exportar Historial</p>
+                    </label>
+                </div> 
+            {% endif %}
             {% endif %}
             <li class="sidebar__item">
                 <a href="{% url 'main' %}" class="sidebar__item-link {{active_objects}}">
