--- a/templates/Objects/object_groups.html
+++ b/templates/Objects/object_groups.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow"> 
 </head>
 <body>
-    {% include 'sideBar.html' with path='main' profile=profile type=type permissions=permissions active_objects="active"%}
+    {% include 'sideBar.html' with path='main' profile=profile type=type permissions=permissions active_objects_groups="active"%}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
